# conception-logicielle-film-reco

./: .coverage  .dockerignore  .env  .env.docker  .env.template  .gitignore  Dockerfile  Makefile  README.md  Texte déposé.txt  api.py  app.db  app.local.db  import_tmdb.py  main.py  main_web.py  pyproject.toml  requirements.txt  ruff.toml  start.py  test.py  test_dao.py  test_film_actor_service.py  test_tmdb.py  test_user_dao.py  tmdb.py
.github/worflows/: docker-ghrc.yml
.github/workflows/: docker-ghcr.yml  tests.yml
app_errors/: user_exists_error.py
business_object/: __init__.py  actor.py  admin.py  client.py  film.py  user.py
dao/: actor_dao.py  connexion.py  dao.py  dao_film.py  db_connection.py  db_connexion.py  favorite_dao.py  film_dao  film_dao.py  init_db.py  local_db_connection.py  user_dao.py
data/: local.db
data/csv/: films.csv  user.csv
kubernetes/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml
service/: actor_service.py  auth_service.py  favorites_service.py  film_service  film_service.py  recommendation_service.py  service_film.py  session.py  stats_service.py  tmdb_service.py  user_service.py
src/: demo_add_from_csv.py  import_tmdb.py  main.py  test_dao.py  test_film_actor_service.py  tmdb.py
src/app_errors/: __init__.py  app_errors.py  creation_error.py  incorrect_password_error.py  invalid_input_error.py  invalid_pass_word_error.py  permission_error.py  some_thing_went_wrong_error.py
src/dao/: actor_dao.py  (+6 more)
templates/: favorites.html  films.html  home.html  login.html
utils/: log_decorator.py  singleton.py
(+27 files in other folders)
