[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project]
name = "conception-logicielle-film-reco"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
